Refactor account and client management: add balance and statement endpoints, update exception handling, and enhance DTOs